Add water and internet fees to unit types, update dependencies and database migrations

--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,11 @@ name = "pypi"
 sqlalchemy = "*"
 alembic = "*"
 fastapi = {extras = ["standard"], version = "*"}
+python-dotenv = "*"
+psycopg2-binary = "*"
+google-auth = "*"
+google-auth-oauthlib = "*"
+google-auth-httplib2 = "*"
 
 [dev-packages]
 
