chore: update .gitignore to exclude sensitive files
- Add node_modules and auth_info to .gitignore
- Prevent accidental commit of WhatsApp auth data
- Prevent commit of Node.js dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@ __pycache__/
 *.pyc
 .env
 .DS_Store
+
+# Node.js dependencies (notification service)
+notification_service/node_modules/
+notification_service/package-lock.json
+
+# WhatsApp authentication data (sensitive)
+notification_service/auth_info/
