--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ google-auth-oauthlib = "*"
 google-auth-httplib2 = "*"
 python-jose = {extras = ["cryptography"], version = "*"}
 requests = "*"
+cloudinary = "*"
 
 [dev-packages]
 
